resolved alignment issues

--- a/src/components/Admin/AdminCreateInvoice.css
+++ b/src/components/Admin/AdminCreateInvoice.css
@@ -263,89 +263,13 @@
         margin-top:5%;
         margin-bottom: 2%;
     }
-    /* .admin-create-invoice-container {
-        margin: 2% 2% 1%;
-    }
-
-    .admin-create-invoice-title {
-        font-size: 0px;
-    }
-
-    .admin-create-invoice-subtitle {
-        font-size: 28px;
-        margin-left: 2%;
-    }
-
-    .admin-create-invoice-select {
-        width: 95%;
-        margin-left: 3%;
-    } */
 
     .admin-create-invoice-data,
     .admin-create-invoice-form {
         grid-template-columns: 1fr;
         margin-left: 2%;
     }
-
-    /* .admin-create-invoice-form {
-        margin-left: 5%;
-    } */
-
-    /* .admin-create-invoice-form-label,
-    .admin-create-invoice-form-input {
-        font-size: 20px;
-    }
-
-    .admin-create-invoice-table-consigment {
-        margin-left: 5%;
-        width: 90%;
-    }
-
-    .admin-create-invoice-table-consigment-input {
-        width: 90%;
-    }
-
-    .admin-create-invoice-button {
-        margin-left: 30%;
-        width: 40%;
-    } */
 }
 
-/* Mobile Styles */
-/* @media only screen and (max-width: 480px) {
-    .admin-create-invoice-title {
-        font-size: 32px;
-    }
 
-    .admin-create-invoice-subtitle {
-        font-size: 24px;
-    }
-
-    .admin-create-invoice-select,
-    .admin-create-invoice-data,
-    .admin-create-invoice-form,
-    .admin-create-invoice-table-consigment {
-        width: 90%;
-        margin-left: 5%;
-    }
-
-    .admin-create-invoice-form {
-        margin-left: 0;
-    }
-
-    .admin-create-invoice-form-label,
-    .admin-create-invoice-form-input {
-        font-size: 18px;
-    }
-
-    .admin-create-invoice-table-consigment-input,
-    .admin-create-invoice-select-table {
-        width: 100%;
-    }
-
-    .admin-create-invoice-button {
-        margin-left: 20%;
-        width: 60%;
-    }
-} */
 
