--- a/src/components/Admin/Admindashboard.css
+++ b/src/components/Admin/Admindashboard.css
@@ -63,13 +63,6 @@
     padding-top: 10px;
 }
 
-/* Mobile styles - 480px width and below */
-/* @media only screen and (max-width: 1200px) {
-    .admin-dashboard-buttons-row {
-        grid-template-columns: 1fr 1fr;
-    }
-} */
-
 /* Tablet styles - 1600px width and below */
 @media only screen and (max-width: 1600px) {
     .admin-dashboard-buttons-row {
